CustomObjects/objects/invoiceit_s__Revenue_Recognition_Rule__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__First_Manual_Schedule_Date__c</fullName>
        <label>First Manual Schedule Date</label>
        <summarizedField>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Schedule_Date__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__First_Manual_Schedule_Month__c</fullName>
        <label>First Manual Schedule Month #</label>
        <summarizedField>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Month__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__No_of_Manual_Schedules__c</fullName>
        <label>No of Manual Schedules</label>
        <summaryForeignKey>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recognition_Date__c</fullName>
        <label>Recognition Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>invoiceit_s__Recognition_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service Activation Date</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Service End Date</fullName>
                </value>
                <value>
                    <fullName>Revenue Recognition Start Date</fullName>
                </value>
                <value>
                    <fullName>Revenue Recognition End Date</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Recognition Over Time</fullName>
                </value>
                <value>
                    <fullName>Monthly Recognition Over Time</fullName>
                </value>
                <value>
                    <fullName>Full Recognition on Specific Date</fullName>
                </value>
                <value>
                    <fullName>Manual Recognition</fullName>
                </value>
                <value>
                    <fullName>Weighted Monthly Recognition Over Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Recognition_Schedule_Total__c</fullName>
        <label>Revenue Recognition Schedule - Total %</label>
        <summarizedField>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Revenue_Percent__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Recognition_Schedule__c.invoiceit_s__Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Revenue Recognition Rule</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Recognition_Type__c</columns>
        <columns>invoiceit_s__Recognition_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Revenue Recognition Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__RevRec_Schedules_only_for_Manual</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(invoiceit_s__Recognition_Type__c, &apos;Manual Recognition&apos;)
&amp;&amp;
invoiceit_s__No_of_Manual_Schedules__c &gt; 0</errorConditionFormula>
        <errorMessage>Revenue Recognition Schedules can be created only for Revenue Recognition Rule of type &apos;Manual Recognition&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__RevRec_Schedules_total_cant_exceed_100</fullName>
        <active>true</active>
        <description>The total % rollup from the manual schedules should be &lt;= 100%</description>
        <errorConditionFormula>invoiceit_s__Revenue_Recognition_Schedule_Total__c &gt; 1</errorConditionFormula>
        <errorMessage>The total % from the all the Revenue Recognition Schedules for your Revenue Recognition Rule cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>